src/app/globals.css
@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;600;700&display=swap');
@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
@import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: Pretendard, 'Noto Sans', 'Noto Sans JP', sans-serif;
  overflow-x: hidden;
  word-wrap: break-word;
  word-break: break-word;

  a {
    color: var(--foreground);
    word-wrap: break-word;
    word-break: break-word;
    overflow-wrap: break-word;
    max-width: 100%;
    display: inline-block;
  }

  & ul {
    list-style-type: disc;
    list-style-position: inside;
    margin-left: 1.5rem;

    & p {
      display: inline;
    }
  }

  & ol {
    list-style-type: decimal; 
    list-style-position: inside;
    margin-left: 1.5rem;

    & p {
      display: inline;
    }
  }

  & ul ul,
  & ol ul {
    list-style-type: circle;
    margin-left: 2rem;
  }

  & ul ul ul,
  & ol ul ul {
    list-style-type: square;
  }


}

